# django-pymemcache

./: .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
djpymemcache/: backend.py  client.py
tests/: settings.py  test_cache.py
