[metadata]
name = django-pymemcache
version = attr: djpymemcache.__version__
keywords = memcached, pymemcache, django, cache, backend
description = Django cache backend based on Pinterest's pymemcache client.
long_description = file: README.rst
author = James Socol
author_email = me@jamessocol.com
url = https://github.com/django-pymemcache/django-pymemcache
download_url = https://github.com/django-pymemcache/django-pymemcache/releases
license = Apache Software License 2.0
project_urls =
    Home = https://pypi.org/project/django-pymemcache/
    Source = https://github.com/django-pymemcache/django-pymemcache
    Tracker = https://github.com/django-pymemcache/django-pymemcache/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
zip_safe = false
packages = find:
test_suite = runtests.runtests
python_requires = >=3.6
install_requires =
    django>=2.2
    pymemcache

[options.packages.find]
exclude = tests

[flake8]
exclude = .eggs,.cache,.git,.tox,docs,migrations,__pycache__

[isort]
include_trailing_comma = true
line_length = 80
multi_line_output = 3
skip = .eggs,.cache,.git,.tox,docs,migrations,__pycache__
known_first_party = djpymemcache
